--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.3.2",
     "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.27.0",
     "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-n": "^17.18.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jiti": "^1.21.7",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
