add theme toggle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
     "**/app/**/page.tsx": "${dirname} -  Page",
     "**/app/**/layout.tsx": "${dirname} -  Layout",
     "**/components/**/index.tsx": "${dirname} -  Component",
-  }
+  },
+  "workbench.editor.showTabs": false,
 }
