--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ DIRECT_URL="postgresql://<url>"
 # For Github OAuth
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
